AI CHATBOT/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnibot-service
spec:
  type: NodePort
  selector:
    app: omnibot
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30005
